tests/negative/typecheck/try_error.orng
// try_error.orng:10:11: error: expected a value of type `(ok: Int | err: ())`, got a value of type `(ok: Int | err: Bool)`
//     try g()
//          ^
// 
fn main() -> Int {
    f() catch 0
}

fn f() -> Bool!Int {
    try g()
}

fn g() -> ()!Int {
    return .err
}